// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard renders if category is an Array 1`] = `
<styles__Card
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  className=""
  to="/news/slug"
>
  <NewsCardHeader
    category={
      Object {
        "hexColour": "#FF5B44",
        "title": "Events",
      }
    }
    className=""
    datePublished="2019-03-28T20:30+00:00"
    readTime={null}
  />
  <styles__CardTitle>
    Here is some news!
  </styles__CardTitle>
</styles__Card>
`;

exports[`NewsCard renders with default values 1`] = `
<styles__Card
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  className=""
  to="/news/slug"
>
  <NewsCardHeader
    category={
      Object {
        "hexColour": "#304242",
        "title": "Amazing News!!",
      }
    }
    className=""
    datePublished="2019-03-28T20:30+00:00"
    readTime={null}
  />
  <styles__CardTitle>
    Here is some news!
  </styles__CardTitle>
</styles__Card>
`;
